Fixed all text and alignment changes

--- a/app/styles/components/student/class/destination/_student-destination-course-accordion.scss
+++ b/app/styles/components/student/class/destination/_student-destination-course-accordion.scss
@@ -42,7 +42,7 @@
 
       .unit-header {
         padding-left: 15px;
-        grid-template-columns: 72px auto;
+        grid-template-columns: 80px auto;
       }
 
       .unit-body {
@@ -53,7 +53,7 @@
             //lesson-container
             .lesson-header {
               padding-left: 30px;
-              grid-template-columns: 72px auto;
+              grid-template-columns: 80px auto;
             }
 
             .lesson-body {
